--- a/order/internal/config/config.yaml
+++ b/order/internal/config/config.yaml
@@ -1,6 +1,6 @@
-grpc-server:
-  port: 50051
+order-service:
+  port: ":50051"
   host: "localhost"
 
-database:
+order-database:
   url: "postgres://postgres:112233@localhost:5437/order_system"
